test/SILPasses/constant_propagation2.sil
// RUN: %swift %s -emit-sil -verify
import Builtin

// fold_sadd_with_overflow_Overflow
sil @fold_sadd_with_overflow_Overflow : $@thin (x: Builtin.RawPointer) -> Builtin.Int64 {
bb0(%0 : $Builtin.RawPointer):
  %1 = builtin_function_ref #Builtin.sadd_with_overflow_Int64 : $@thin (Builtin.Int64, Builtin.Int64, Builtin.Int1) -> (Builtin.Int64, Builtin.Int1) 
  %2 = integer_literal $Builtin.Int64, 9223372036854775807
  %3 = integer_literal $Builtin.Int64, 9223372036854775807
  %21 = integer_literal $Builtin.Int1, 1
  %4 = apply %1(%2, %3, %21) : $@thin (Builtin.Int64, Builtin.Int64, Builtin.Int1) -> (Builtin.Int64, Builtin.Int1) // expected-error {{results in an overflow}}
  %8 = tuple_extract %4 : $(Builtin.Int64, Builtin.Int1), 0
  return %8 : $Builtin.Int64
}
